force-app/main/default/objects/Experiencia_Laboral__c/Experiencia_Laboral__c.object-meta.xml
<CustomObject>
    <description>Objeto para llevar control de las experiencia laborales.</description>
    <label>Experiencia Laboral</label>
    <nameField>
        <label>Nombre de la empresa</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Experiencias Laborales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>