force-app/main/default/objects/Experiencia_Laboral__c/fields/Cargo__c.field-meta.xml
<CustomField>
    <fullName>Cargo__c</fullName>
    <description>Cargo en el que trabajó.</description>
    <label>Cargo</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>