force-app/main/default/objects/Experiencia_Laboral__c/fields/Ciudad__c.field-meta.xml
<CustomField>
    <fullName>Ciudad__c</fullName>
    <description>Ciudad donde tuvo la experiencia laboral</description>
    <label>Ciudad</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>