force-app/main/default/objects/Experiencia_Laboral__c/fields/Experiencia_en_anos__c.field-meta.xml
<CustomField>
    <fullName>Experiencia_en_anos__c</fullName>
    <formula>FLOOR(( Fecha_de_Retiro__c -  Fecha_de_Ingreso__c ) / 365 )</formula>
    <label>Experiencia en años</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>