force-app/main/default/objects/Experiencia_Laboral__c/fields/Fecha_de_Ingreso__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Ingreso__c</fullName>
    <description>Fecha en la que ingresó.</description>
    <label>Fecha de Ingreso</label>
    <required>true</required>
    <type>Date</type>
</CustomField>