force-app/main/default/objects/Experiencia_Laboral__c/fields/Fecha_de_Retiro__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Retiro__c</fullName>
    <description>Fecha en la que se retiró. No es obligatorio al agregar su experiencia actual.</description>
    <label>Fecha de Retiro</label>
    <type>Date</type>
</CustomField>