force-app/main/default/objects/Experiencia_Laboral__c/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <description>Pais donde tuvo la experiencia laboral</description>
    <label>País</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>