force-app/main/default/objects/Experiencia_Laboral__c/fields/Profesional__c.field-meta.xml
<CustomField>
    <fullName>Profesional__c</fullName>
    <description>Experiencia laboral del profesional.</description>
    <label>Profesional</label>
    <referenceTo>Empleado__c</referenceTo>
    <relationshipLabel>Experiencias Laborales</relationshipLabel>
    <relationshipName>Experiencias_Laborales</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>