force-app/main/default/objects/Experiencia_Laboral__c/fields/Rubro__c.field-meta.xml
<CustomField>
    <fullName>Rubro__c</fullName>
    <label>Rubro de la empresa</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>